--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body class="bg-body2">
 
 <header>
-    <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-main">
+    <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-nav">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
                 <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
-                     class="bi bi-explicit text-dark" viewBox="0 0 16 16">
+                     class="bi bi-explicit text-light" viewBox="0 0 16 16">
                     <path d="M6.826 10.88H10.5V12h-5V4.002h5v1.12H6.826V7.4h3.457v1.073H6.826v2.408Z"/>
                     <path d="M2.5 0A2.5 2.5 0 0 0 0 2.5v11A2.5 2.5 0 0 0 2.5 16h11a2.5 2.5 0 0 0 2.5-2.5v-11A2.5 2.5 0 0 0 13.5 0h-11ZM1 2.5A1.5 1.5 0 0 1 2.5 1h11A1.5 1.5 0 0 1 15 2.5v11a1.5 1.5 0 0 1-1.5 1.5h-11A1.5 1.5 0 0 1 1 13.5v-11Z"/>
                 </svg>
@@ -69,23 +69,23 @@
 
 <main class="container">
     <div class="container2  d-flex flex-column align-items-center">
-        <h1 class="mt-2 mb-3 display-1 ">Studying english</h1>
+        <h1 class="mt-2 mb-3 display-1 text-nav">Studying english</h1>
 
     </div>
 
     <div class="container-md d-flex flex-column mt-3 justify-content-center">
 
-        <div class="container  p-4 shadow mb-4 bg-body rounded">
-            <h2>
+        <div class="container  p-4 shadow mb-4 bg-my1 rounded">
+            <h2 class="text-nav">
                 Grammar course
             </h2>
-            <p class="fs-4 fw-light">There are a lot of interesting <strong>text</strong> and <strong>grammar
+            <p class="fs-4 fw-light text-nav">There are a lot of interesting <strong>text</strong> and <strong>grammar
                 exercises</strong>. You can find <strong>new words</strong> and <strong>grammar constructions</strong>
             </p>
 
             <div class="container d-flex flex-row justify-content-between">
                 <p>
-                    <a class="btn btn-outline-my1" data-bs-toggle="collapse" href="#collapseExample" role="button"
+                    <a class="btn btn-outline-dark" data-bs-toggle="collapse" href="#collapseExample" role="button"
                        aria-expanded="false" aria-controls="collapseExample">
 
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
@@ -95,7 +95,7 @@
                     </a>
                 </p>
                 <div class="btn-group">
-                    <a class="btn btn-lg  btn-my1" href="grammar.html">
+                    <a class="btn btn-lg btn-dark" href="grammar.html">
                         start
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                              class="bi bi-chevron-right" viewBox="0 0 16 16">
@@ -421,17 +421,17 @@
         </div>
 
 
-        <div class="p-4 mt-2 shadow mb-5 bg-body rounded">
-            <h2>
+        <div class="p-4 mt-2 shadow mb-5 bg-my2 rounded">
+            <h2 class="text-nav">
                 Listening course
             </h2>
-            <p class="fs-4 fw-light">There are a lot of interesting <strong>text</strong> and <strong>grammar
+            <p class="fs-4 fw-light text-nav">There are a lot of interesting <strong>text</strong> and <strong>grammar
                 exercises</strong>. You can find <strong>new words</strong> and <strong>grammar constructions</strong>
             </p>
 
             <div class="container d-flex flex-row justify-content-between ">
                 <p>
-                    <a class="btn btn-outline-my2" data-bs-toggle="collapse" href="#collapseExample2" role="button"
+                    <a class="btn btn-outline-dark" data-bs-toggle="collapse" href="#collapseExample2" role="button"
                        aria-expanded="false" aria-controls="collapseExample2">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                              class="bi bi-caret-down-fill" viewBox="0 0 16 16">
@@ -440,7 +440,7 @@
                     </a>
                 </p>
                 <div class="btn-group">
-                    <a class="btn btn-lg btn-my2" href="listerning.html">
+                    <a class="btn btn-lg btn-dark" href="listerning.html">
                         start
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                              class="bi bi-chevron-right" viewBox="0 0 16 16">
@@ -704,16 +704,16 @@
 
         </div>
 
-        <div class="container d-flex flex-row justify-content-between rounded-3 p-3 shadow bg-body">
-            <a class="btn  btn-outline-secondary" href="news.html">
+        <div class="container d-flex flex-row justify-content-between rounded-3 p-3 shadow ">
+            <a class="btn  btn-outline-dark" href="news.html">
                 News
 
             </a>
-            <a class="btn  btn-outline-secondary" href="article.html">
+            <a class="btn  btn-outline-dark" href="article.html">
                 Articles
 
             </a>
-            <a class="btn  btn-outline-secondary" href="aboutus.html">
+            <a class="btn  btn-outline-dark" href="aboutus.html">
                 About us
 
             </a>
