--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@
 
             <div class="collapse" id="collapseExample">
 
-                <div class="p-2 rounded-3 mt-3 border border-my1">
+                <div class="p-2 rounded-3 mt-3">
 
                     <div class="accordion accordion-flush" id="accordionPanelsStayOpenExample">
 
-                        <div class="accordion-item border-bottom border-my1">
+                        <div class="accordion-item">
                             <h2 class="accordion-header" id="panelsStayOpen-headingOne">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#panelsStayOpen-collapseOne"
@@ -454,7 +454,7 @@
             </div>
             <div class="collapse" id="collapseExample2">
 
-                    <div class="p-2 mt-3 rounded-3 border border-my2">
+                    <div class="p-2 mt-3 rounded-3">
                         <div class="accordion accordion-flush" id="accordionPanelsStayOpenExample2">
 
                             <div class="accordion-item border-bottom border-my2">
