--- a/index.html
+++ b/index.html
@@ -727,7 +727,7 @@
 
 <div class="container mt-3">
     <footer class="py-3 my-4">
-        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+        <ul class="nav justify-content-center border-bottom border-secondary pb-3 mb-3">
             <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Home</a></li>
             <li class="nav-item"><a href="news.html" class="nav-link px-2 text-muted">News</a></li>
             <li class="nav-item"><a href="article.html" class="nav-link px-2 text-muted">Articles</a></li>
