--- a/index.html
+++ b/index.html
@@ -76,16 +76,16 @@
     <div class="container-md d-flex flex-column mt-3 justify-content-center">
 
         <div class="container  p-4 shadow mb-4 bg-my1 rounded">
-            <h2 class="text-nav">
+            <h2 class="text-light">
                 Grammar course
             </h2>
-            <p class="fs-4 fw-light text-nav">There are a lot of interesting <strong>text</strong> and <strong>grammar
+            <p class="fs-4 fw-light text-light">There are a lot of interesting <strong>text</strong> and <strong>grammar
                 exercises</strong>. You can find <strong>new words</strong> and <strong>grammar constructions</strong>
             </p>
 
             <div class="container d-flex flex-row justify-content-between">
                 <p>
-                    <a class="btn btn-outline-dark" data-bs-toggle="collapse" href="#collapseExample" role="button"
+                    <a class="btn btn-outline-light" data-bs-toggle="collapse" href="#collapseExample" role="button"
                        aria-expanded="false" aria-controls="collapseExample">
 
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
@@ -95,7 +95,7 @@
                     </a>
                 </p>
                 <div class="btn-group">
-                    <a class="btn btn-lg btn-dark" href="grammar.html">
+                    <a class="btn btn-lg btn-outline-light" href="grammar.html">
                         start
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                              class="bi bi-chevron-right" viewBox="0 0 16 16">
