--- a/article.html
+++ b/article.html
@@ -10,10 +10,10 @@
 <body class="bg-body2">
 
 <header>
-    <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-main">
+    <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-nav">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
-                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-explicit text-dark" viewBox="0 0 16 16">
+                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-explicit text-light" viewBox="0 0 16 16">
                     <path d="M6.826 10.88H10.5V12h-5V4.002h5v1.12H6.826V7.4h3.457v1.073H6.826v2.408Z"/>
                     <path d="M2.5 0A2.5 2.5 0 0 0 0 2.5v11A2.5 2.5 0 0 0 2.5 16h11a2.5 2.5 0 0 0 2.5-2.5v-11A2.5 2.5 0 0 0 13.5 0h-11ZM1 2.5A1.5 1.5 0 0 1 2.5 1h11A1.5 1.5 0 0 1 15 2.5v11a1.5 1.5 0 0 1-1.5 1.5h-11A1.5 1.5 0 0 1 1 13.5v-11Z"/>
                 </svg>
@@ -81,7 +81,7 @@
     <div class="accordion accordion-flush" id="accordionPanelsStayOpenExample">
         <div class="accordion-item">
             <h2 class="accordion-header" id="panelsStayOpen-headingOne">
-                <button class="accordion-button collapsed bg-main" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                <button class="accordion-button collapsed bg-nav text-light" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
                     <h2>Culture </h2>
                 </button>
             </h2>
@@ -139,7 +139,7 @@
 
         <div class="accordion-item mt-3">
             <h2 class="accordion-header " id="panelsStayOpen-headingTwo">
-                <button class="accordion-button collapsed bg-main" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+                <button class="accordion-button collapsed bg-nav text-light" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
                     <h2>Languages</h2>
                 </button>
             </h2>
@@ -187,7 +187,7 @@
 
 <div class="container mt-3">
     <footer class="py-3 my-4">
-        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+        <ul class="nav justify-content-center border-bottom border-secondary pb-3 mb-3">
             <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Home</a></li>
             <li class="nav-item"><a href="news.html" class="nav-link px-2 text-muted">News</a></li>
             <li class="nav-item"><a href="article.html" class="nav-link px-2 text-muted">Articles</a></li>
