--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
 
     <div class="container-md d-flex flex-column mt-3 justify-content-center">
 
-        <div class="container  p-4 shadow mb-4 bg-my1 rounded">
+        <div class="container  p-4 shadow mb-4 bg-body rounded">
             <div class="d-flex flex-row justify-content-between">
                 <h2 class="text-nav">
                     Grammar course
                 </h2>
                 <p>
-                    <a class="btn btn-outline-dark" data-bs-toggle="collapse" href="#collapseExample" role="button"
+                    <a class="btn btn-outline-my1" data-bs-toggle="collapse" href="#collapseExample" role="button"
                        aria-expanded="false" aria-controls="collapseExample">
 
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
@@ -97,7 +97,7 @@
             </p>
 
 
-            <a class="btn btn-lg btn-dark" href="grammar.html">
+            <a class="btn btn-lg btn-my1" href="grammar.html">
                 start
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                      class="bi bi-chevron-right" viewBox="0 0 16 16">
@@ -109,11 +109,11 @@
 
             <div class="collapse" id="collapseExample">
 
-                <div class="p-2 rounded-3 mt-3">
+                <div class="p-2 rounded-3 mt-3 border border-my1">
 
                     <div class="accordion accordion-flush" id="accordionPanelsStayOpenExample">
 
-                        <div class="accordion-item">
+                        <div class="accordion-item border-bottom border-my1">
                             <h2 class="accordion-header" id="panelsStayOpen-headingOne">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#panelsStayOpen-collapseOne"
@@ -420,13 +420,13 @@
         </div>
 
 
-        <div class="p-4 mt-2 shadow mb-5 bg-my2 rounded">
+        <div class="p-4 mt-2 shadow mb-5 bg-body rounded">
             <div class="d-flex flex-row justify-content-between">
                 <h2 class="text-nav">
                     Listening course
                 </h2>
                 <p>
-                    <a class="btn btn-outline-dark" data-bs-toggle="collapse" href="#collapseExample2" role="button"
+                    <a class="btn btn-outline-my2" data-bs-toggle="collapse" href="#collapseExample2" role="button"
                        aria-expanded="false" aria-controls="collapseExample2">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                              class="bi bi-caret-down-fill" viewBox="0 0 16 16">
@@ -440,7 +440,7 @@
                 exercises</strong>. You can find <strong>new words</strong> and <strong>grammar constructions</strong>
             </p>
 
-            <a class="btn btn-lg btn-dark" href="listerning.html">
+            <a class="btn btn-lg btn-my2" href="listerning.html">
                 start
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                      class="bi bi-chevron-right" viewBox="0 0 16 16">
@@ -452,7 +452,7 @@
 
             <div class="collapse" id="collapseExample2">
 
-                <div class="p-2 mt-3 rounded-3">
+                <div class="p-2 mt-3 rounded-3 border border-my2">
                     <div class="accordion accordion-flush" id="accordionPanelsStayOpenExample2">
 
                         <div class="accordion-item border-bottom border-my2">
