--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link href="forindex.css" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@1,200&display=swap" rel="stylesheet">
+
+
+
 </head>
 <body class="bg-body2">
 
@@ -69,7 +76,7 @@
 
 <main class="container">
     <div class="container2  d-flex flex-column align-items-center">
-        <h1 class="mt-2 mb-3 display-1 text-nav">Studying english</h1>
+        <h1 class="mt-2 mb-3 display-1 text-nav" >Studying english</h1>
 
     </div>
 
@@ -92,12 +99,12 @@
                 </p>
             </div>
 
-            <p class="fs-4 fw-light text-nav">There are a lot of interesting <strong>text</strong> and <strong>grammar
+            <p class="fs-4 fw-light text-nav" >There are a lot of interesting <strong>text</strong> and <strong>grammar
                 exercises</strong>. You can find <strong>new words</strong> and <strong>grammar constructions</strong>
             </p>
 
 
-            <a class="btn btn-lg btn-my1" href="grammar.html">
+            <a class="btn btn-lg btn-my1 fs-3" style="font-family:'Josefin Sans', sans-serif;" href="grammar.html">
                 start
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                      class="bi bi-chevron-right" viewBox="0 0 16 16">
@@ -440,7 +447,7 @@
                 exercises</strong>. You can find <strong>new words</strong> and <strong>grammar constructions</strong>
             </p>
 
-            <a class="btn btn-lg btn-my2" href="listerning.html">
+            <a class="btn btn-lg btn-my2 fs-3" style="font-family:'Josefin Sans', sans-serif;" href="listerning.html">
                 start
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                      class="bi bi-chevron-right" viewBox="0 0 16 16">
