--- a/grammar.html
+++ b/grammar.html
@@ -87,18 +87,21 @@
         </p>
     </div>
 
-    <div class="container p-3 rounded-3 ">
+    <div class="container p-3 rounded-3 shadow ">
 
         <div class="accordion accordion-flush" id="accordionPanelsStayOpenExample">
 
             <div class="accordion-item">
                 <h2 class="accordion-header" id="panelsStayOpen-headingOne">
-                    <button class="accordion-button collapsed bg-secondary bg-opacity-25" type="button"
+                    <button class="accordion-button collapsed bg-my1" type="button"
                             data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne"
                             aria-controls="panelsStayOpen-collapseOne">
                         <div class="d-flex flex-column">
                             <div class="container">
-                                <img src="res/battery-half.svg">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-battery-half" viewBox="0 0 16 16">
+                                    <path d="M2 6h5v4H2V6z"/>
+                                    <path d="M2 4a2 2 0 0 0-2 2v4a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2H2zm10 1a1 1 0 0 1 1 1v4a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V6a1 1 0 0 1 1-1h10zm4 3a1.5 1.5 0 0 1-1.5 1.5v-3A1.5 1.5 0 0 1 16 8z"/>
+                                </svg>
                             </div>
                             <div class="container">
                                 <h2>Elementary</h2>
@@ -222,17 +225,19 @@
                         </a>
                     </ul>
 
-                </div>
+
             </div>
 
             <div class="accordion-item mt-2">
                 <h2 class="accordion-header" id="panelsStayOpen-heading2">
-                    <button class="accordion-button collapsed bg-secondary bg-opacity-25" type="button"
+                    <button class="accordion-button collapsed bg-my1" type="button"
                             data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapse2" aria-expanded="true"
                             aria-controls="panelsStayOpen-collapse2">
                         <div class="d-flex flex-column">
                             <div class="container">
-                                <img src="res/bicycle.svg">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bicycle" viewBox="0 0 16 16">
+                                    <path d="M4 4.5a.5.5 0 0 1 .5-.5H6a.5.5 0 0 1 0 1v.5h4.14l.386-1.158A.5.5 0 0 1 11 4h1a.5.5 0 0 1 0 1h-.64l-.311.935.807 1.29a3 3 0 1 1-.848.53l-.508-.812-2.076 3.322A.5.5 0 0 1 8 10.5H5.959a3 3 0 1 1-1.815-3.274L5 5.856V5h-.5a.5.5 0 0 1-.5-.5zm1.5 2.443-.508.814c.5.444.85 1.054.967 1.743h1.139L5.5 6.943zM8 9.057 9.598 6.5H6.402L8 9.057zM4.937 9.5a1.997 1.997 0 0 0-.487-.877l-.548.877h1.035zM3.603 8.092A2 2 0 1 0 4.937 10.5H3a.5.5 0 0 1-.424-.765l1.027-1.643zm7.947.53a2 2 0 1 0 .848-.53l1.026 1.643a.5.5 0 1 1-.848.53L11.55 8.623z"/>
+                                </svg>
                             </div>
                             <div class="container">
                                 <h2>Intermediate</h2>
@@ -307,12 +312,14 @@
 
             <div class="accordion-item mt-2">
                 <h2 class="accordion-header" id="panelsStayOpen-heading4">
-                    <button class="accordion-button collapsed bg-secondary bg-opacity-25" type="button"
+                    <button class="accordion-button collapsed bg-my1" type="button"
                             data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapse4" aria-expanded="true"
                             aria-controls="panelsStayOpen-collapse4">
                         <div class="d-flex flex-column">
                             <div class="container">
-                                <img src="res/book.svg">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-book" viewBox="0 0 16 16">
+                                    <path d="M1 2.828c.885-.37 2.154-.769 3.388-.893 1.33-.134 2.458.063 3.112.752v9.746c-.935-.53-2.12-.603-3.213-.493-1.18.12-2.37.461-3.287.811V2.828zm7.5-.141c.654-.689 1.782-.886 3.112-.752 1.234.124 2.503.523 3.388.893v9.923c-.918-.35-2.107-.692-3.287-.81-1.094-.111-2.278-.039-3.213.492V2.687zM8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783z"/>
+                                </svg>
                             </div>
                             <div class="container">
                                 <h2>Advance</h2>
@@ -387,6 +394,7 @@
 
 
         </div>
+    </div>
     </div>
 
     <div class="container mt-3">
