--- a/grammar.html
+++ b/grammar.html
@@ -89,9 +89,9 @@
 
     <div class="container p-3 rounded-3 shadow ">
 
-        <div class="accordion accordion-flush" id="accordionPanelsStayOpenExample">
+        <div class="accordion accordion-flush " id="accordionPanelsStayOpenExample">
 
-            <div class="accordion-item">
+            <div class="accordion-item bg-body2">
                 <h2 class="accordion-header" id="panelsStayOpen-headingOne">
                     <button class="accordion-button collapsed bg-my1" type="button"
                             data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne"
@@ -228,7 +228,7 @@
 
             </div>
 
-            <div class="accordion-item mt-2">
+            <div class="accordion-item mt-2 bg-body2">
                 <h2 class="accordion-header" id="panelsStayOpen-heading2">
                     <button class="accordion-button collapsed bg-my1" type="button"
                             data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapse2" aria-expanded="true"
@@ -310,7 +310,7 @@
                 </div>
             </div>
 
-            <div class="accordion-item mt-2">
+            <div class="accordion-item mt-2 bg-body2">
                 <h2 class="accordion-header" id="panelsStayOpen-heading4">
                     <button class="accordion-button collapsed bg-my1" type="button"
                             data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapse4" aria-expanded="true"
