--- a/grammar.html
+++ b/grammar.html
@@ -93,7 +93,7 @@
 
             <div class="accordion-item bg-body2">
                 <h2 class="accordion-header" id="panelsStayOpen-headingOne">
-                    <button class="accordion-button collapsed bg-my1" type="button"
+                    <button class="accordion-button collapsed bg-secondary text-nav" type="button"
                             data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne"
                             aria-controls="panelsStayOpen-collapseOne">
                         <div class="d-flex flex-column">
@@ -230,7 +230,7 @@
 
             <div class="accordion-item mt-2 bg-body2">
                 <h2 class="accordion-header" id="panelsStayOpen-heading2">
-                    <button class="accordion-button collapsed bg-my1" type="button"
+                    <button class="accordion-button collapsed bg-secondary text-nav" type="button"
                             data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapse2" aria-expanded="true"
                             aria-controls="panelsStayOpen-collapse2">
                         <div class="d-flex flex-column">
@@ -310,9 +310,9 @@
                 </div>
             </div>
 
-            <div class="accordion-item mt-2 bg-body2">
+            <div class="accordion-item mt-2 bg-body3">
                 <h2 class="accordion-header" id="panelsStayOpen-heading4">
-                    <button class="accordion-button collapsed bg-my1" type="button"
+                    <button class="accordion-button collapsed bg-secondary text-nav" type="button"
                             data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapse4" aria-expanded="true"
                             aria-controls="panelsStayOpen-collapse4">
                         <div class="d-flex flex-column">
