--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
     <div class="container-md d-flex flex-column mt-3 justify-content-center">
 
-        <div class="container  p-4 shadow mb-4 bg-body rounded">
+        <div class="container  p-4 shadow mb-4 bg-body3 rounded">
             <div class="d-flex flex-row justify-content-between">
                 <h2 class="text-nav">
                     Grammar course
@@ -427,7 +427,7 @@
         </div>
 
 
-        <div class="p-4 mt-2 shadow mb-5 bg-body rounded">
+        <div class="p-4 mt-2 shadow mb-5 bg-body3 rounded">
             <div class="d-flex flex-row justify-content-between">
                 <h2 class="text-nav">
                     Listening course
