--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
                 exercises</strong>. You can find <strong>new words</strong> and <strong>grammar constructions</strong>
             </p>
 
-            <a class="btn btn-lg btn-my2 fs-3" style="font-family:'Josefin Sans', sans-serif;" href="listerning.html">
+            <a class="btn btn-lg btn-my2 fs-3" style="font-family:'Josefin Sans', sans-serif;" href="grammar.html">
                 start
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                      class="bi bi-chevron-right" viewBox="0 0 16 16">
@@ -489,7 +489,7 @@
                                  aria-labelledby="panelsStayOpen-headingThree">
 
                                 <ul class="list-group">
-                                    <a href="reading/elementary/lesson1.html"
+                                    <a href="grammar/elementary/lesson1.html"
                                        class="list-group-item list-group-item-action " aria-current="true">
                                         <div class="d-flex w-100 justify-content-between">
                                             <h5 class="mb-1">Lesson 1</h5>
