--- a/reading/elementary/lesson1.html
+++ b/reading/elementary/lesson1.html
@@ -89,25 +89,24 @@
 
     <div class="container">
         <h1 class="display-1 text-center bg-body shadow rounded-3">Lesson 1</h1>
-        <h4 class="mt-2">1. Reading text</h4>
+        <h4 class="mt-2 p-1 bg-body shadow w-50 rounded">1. Reading text</h4>
         <p class="mt-1">
             <a class="btn btn-light fs-4 shadow" data-bs-toggle="collapse" href="#text" role="button"
                aria-expanded="false" aria-controls="text">
-                open text
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-book" viewBox="0 0 16 16">
+                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-book" viewBox="0 0 16 16">
                     <path d="M1 2.828c.885-.37 2.154-.769 3.388-.893 1.33-.134 2.458.063 3.112.752v9.746c-.935-.53-2.12-.603-3.213-.493-1.18.12-2.37.461-3.287.811V2.828zm7.5-.141c.654-.689 1.782-.886 3.112-.752 1.234.124 2.503.523 3.388.893v9.923c-.918-.35-2.107-.692-3.287-.81-1.094-.111-2.278-.039-3.213.492V2.687zM8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783z"/>
                 </svg>
 
             </a>
         </p>
 
-        <div class="collapse" id="text">
-            <div class="container bg-body shadow rounded-3">
-                <div class="container mt-4 text-center">
+        <div class="collapse show" id="text">
+            <div class="container bg-body shadow rounded-3 p-2">
+                <div class="container text-center">
                     <h2>No Pets Here</h2>
                 </div>
-                <div class="container  ">
-                    <p class="fs-5 fw-weight-light">
+                <div class="container ">
+                    <p class="fs-5 fw-weight-light" style="text-indent: 25px;">
                         Joe and Bella had always wanted a pet. But their parents always said no.
 
                         “We're too busy,” they said. “Pets make too much mess. We've enough to do, without a pet as well!”
@@ -126,6 +125,8 @@
 
                         “No kittens, either,” said Dad. “In fact, no pets at all!”
 
+                    </p>
+                    <p class="fs-5 fw-weight-light" style="text-indent: 25px;">
                         The next day, Bella was going to Izzy's house. Joe decided to invite his friend Finn round to play in
                         the garden. He told Finn, “We'll be able to play football for once without Bella getting in the way.”
 
@@ -157,6 +158,8 @@
                         “Just make sure she doesn't escape,” said Mum. “If she did, we'd never catch her. Be careful when you
                         put her back in her cage.”
 
+                    </p>
+                    <p class="fs-5 fw-weight-light" style="text-indent: 25px;">
                         Joe and Finn went into the garden to play football. They were practising penalties, when they heard a
                         shout. It was Bella – and it was loud!
 
@@ -185,6 +188,8 @@
 
                         “I'm afraid she's gone under the floorboards,” said Dad. “We'll never find her now.”
 
+                    </p>
+                    <p class="fs-5 fw-weight-light" style="text-indent: 25px;">
                         For a whole week, there was no sign of Harriet. Then, one night, Joe woke up. “I wonder,” he thought,
                         “if I went downstairs now and was very quiet...”
 
@@ -205,18 +210,19 @@
                         “I suppose that's true,” said Dad.
 
                         And that's how Joe got a kitten. He called him Caspar.
+
                     </p>
+
                 </div>
             </div>
         </div>
 
-        <h4 class="mt-2">2.Text exercises</h4>
+        <h4 class="mt-2 p-1 bg-body shadow w-50 rounded">2.Text exercises</h4>
 
         <p class="mt-1">
             <a class="btn btn-light fs-4 shadow" data-bs-toggle="collapse" href="#textEx" role="button"
                aria-expanded="false" aria-controls="textEx">
-                open exercises
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-blockquote-right" viewBox="0 0 16 16">
+                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-blockquote-right" viewBox="0 0 16 16">
                     <path d="M2.5 3a.5.5 0 0 0 0 1h11a.5.5 0 0 0 0-1h-11zm0 3a.5.5 0 0 0 0 1h6a.5.5 0 0 0 0-1h-6zm0 3a.5.5 0 0 0 0 1h6a.5.5 0 0 0 0-1h-6zm0 3a.5.5 0 0 0 0 1h11a.5.5 0 0 0 0-1h-11zm10.113-5.373a6.59 6.59 0 0 0-.445-.275l.21-.352c.122.074.272.17.452.287.18.117.35.26.51.428.156.164.289.351.398.562.11.207.164.438.164.692 0 .36-.072.65-.216.873-.145.219-.385.328-.721.328-.215 0-.383-.07-.504-.211a.697.697 0 0 1-.188-.463c0-.23.07-.404.211-.521.137-.121.326-.182.569-.182h.281a1.686 1.686 0 0 0-.123-.498 1.379 1.379 0 0 0-.252-.37 1.94 1.94 0 0 0-.346-.298zm-2.168 0A6.59 6.59 0 0 0 10 6.352L10.21 6c.122.074.272.17.452.287.18.117.35.26.51.428.156.164.289.351.398.562.11.207.164.438.164.692 0 .36-.072.65-.216.873-.145.219-.385.328-.721.328-.215 0-.383-.07-.504-.211a.697.697 0 0 1-.188-.463c0-.23.07-.404.211-.521.137-.121.327-.182.569-.182h.281a1.749 1.749 0 0 0-.117-.492 1.402 1.402 0 0 0-.258-.375 1.94 1.94 0 0 0-.346-.3z"/>
                 </svg>
 
