--- a/grammar/elementary/lesson1.html
+++ b/grammar/elementary/lesson1.html
@@ -126,7 +126,7 @@
                     <p><b>is there...?</b></p>
                     <p><b>there is not...</b>(<b>there isn't</b> or <b>there's not</b>)</p>
                 </div>
-                <div class="d-flex flex-column border">
+                <div class="d-flex flex-column border w-75">
                     <ul>
                         <li><b>There's</b> a big three in the garden</li>
                         <li><b>There's</b> nothing on TV tonight</li>
@@ -135,8 +135,14 @@
 
                 </div>
             </div>
-            <div class="container mt-2 d-flex flex-wrap justify-content-between">
-                <div class="d-flex flex-column border">
+            <div class="container mt-3 d-flex flex-wrap justify-content-between ">
+                <div class="border border-my2 p-1 d-flex flex-column w-25">
+                    <p><b>there are...</b></p>
+                    <p><b>are there...?</b></p>
+                    <p><b>there are not...</b>(<b>there aren't</b>)</p>
+                </div>
+
+                <div class="d-flex flex-column border w-75">
                     <ul>
                         <li><b>There are</b> some big trees in the garden</li>
                         <li><b>There are</b> a lot of accidents on this road</li>
@@ -144,11 +150,7 @@
                     </ul>
 
                 </div>
-                <div class="border border-my2 p-1 d-flex flex-column w-25">
-                    <p><b>there are...</b></p>
-                    <p><b>are there...?</b></p>
-                    <p><b>there are not...</b>(<b>there aren't</b>)</p>
-                </div>
+
 
             </div>
 
