--- a/grammar/elementary/lesson1.html
+++ b/grammar/elementary/lesson1.html
@@ -95,58 +95,50 @@
                 <p class="fs-3 bg-secondary bg-opacity-25 shadow p-1 rounded"><b>there is</b></p>
                 <p class="fs-3 bg-secondary bg-opacity-25 shadow p-1 rounded"><b>there are</b></p>
             </div>
-            <div class="container d-flex flex-wrap justify-content-between">
-                <div class="d-flex flex-column justify-content-center  p-1 m-1">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="130" height="130" fill="currentColor" class="bi bi-boombox-fill" viewBox="0 0 16 16">
-                        <path d="M14.5.5a.5.5 0 0 0-1 0V2H1a1 1 0 0 0-1 1v2h16V3a1 1 0 0 0-1-1h-.5V.5ZM2.5 4a.5.5 0 1 1 0-1 .5.5 0 0 1 0 1Zm2 0a.5.5 0 1 1 0-1 .5.5 0 0 1 0 1Zm7.5-.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0Zm1.5.5a.5.5 0 1 1 0-1 .5.5 0 0 1 0 1Zm-7-1h3a.5.5 0 0 1 0 1h-3a.5.5 0 0 1 0-1Zm-2 9a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Zm.5-1.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0Zm6.5 1.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Zm0-1a.5.5 0 1 0 0-1 .5.5 0 0 0 0 1Z"/>
-                        <path d="M16 6H0v8a1 1 0 0 0 1 1h14a1 1 0 0 0 1-1V6ZM4.5 13a2.5 2.5 0 1 1 0-5 2.5 2.5 0 0 1 0 5Zm7 0a2.5 2.5 0 1 1 0-5 2.5 2.5 0 0 1 0 5Z"/>
-                    </svg>
+            <div class="container d-flex flex-wrap m-auto">
+                <div class="text-center m-1">
+                    <img class="img-fluid img-thumbnail" src="../../res/train.jpg">
                     <p class="fs-5 mt-2"><b>There's</b> a train at 10.30</p>
                 </div>
 
-                <div class="d-flex flex-column justify-content-center  p-1 m-1">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="130" height="130" fill="currentColor" class="bi bi-binoculars" viewBox="0 0 16 16">
-                        <path d="M3 2.5A1.5 1.5 0 0 1 4.5 1h1A1.5 1.5 0 0 1 7 2.5V5h2V2.5A1.5 1.5 0 0 1 10.5 1h1A1.5 1.5 0 0 1 13 2.5v2.382a.5.5 0 0 0 .276.447l.895.447A1.5 1.5 0 0 1 15 7.118V14.5a1.5 1.5 0 0 1-1.5 1.5h-3A1.5 1.5 0 0 1 9 14.5v-3a.5.5 0 0 1 .146-.354l.854-.853V9.5a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5v.793l.854.853A.5.5 0 0 1 7 11.5v3A1.5 1.5 0 0 1 5.5 16h-3A1.5 1.5 0 0 1 1 14.5V7.118a1.5 1.5 0 0 1 .83-1.342l.894-.447A.5.5 0 0 0 3 4.882V2.5zM4.5 2a.5.5 0 0 0-.5.5V3h2v-.5a.5.5 0 0 0-.5-.5h-1zM6 4H4v.882a1.5 1.5 0 0 1-.83 1.342l-.894.447A.5.5 0 0 0 2 7.118V13h4v-1.293l-.854-.853A.5.5 0 0 1 5 10.5v-1A1.5 1.5 0 0 1 6.5 8h3A1.5 1.5 0 0 1 11 9.5v1a.5.5 0 0 1-.146.354l-.854.853V13h4V7.118a.5.5 0 0 0-.276-.447l-.895-.447A1.5 1.5 0 0 1 12 4.882V4h-2v1.5a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5V4zm4-1h2v-.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5V3zm4 11h-4v.5a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5V14zm-8 0H2v.5a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5V14z"/>
-                    </svg>
+                <div class="text-center m-1">
+                    <img class="img-fluid img-thumbnail" src="../../res/man%20on%20the%20ruf.jpg">
                     <p class="fs-5 mt-2"><b>There's</b> a man on the roof</p>
                 </div>
 
-                <div class="d-flex flex-column justify-content-center  p-1 m-1">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="130" height="130" fill="currentColor" class="bi bi-border-outer" viewBox="0 0 16 16">
-                        <path d="M7.5 1.906v.938h1v-.938h-1zm0 1.875v.938h1V3.78h-1zm0 1.875v.938h1v-.938h-1zM1.906 8.5h.938v-1h-.938v1zm1.875 0h.938v-1H3.78v1zm1.875 0h.938v-1h-.938v1zm2.813 0v-.031H8.5V7.53h-.031V7.5H7.53v.031H7.5v.938h.031V8.5h.938zm.937 0h.938v-1h-.938v1zm1.875 0h.938v-1h-.938v1zm1.875 0h.938v-1h-.938v1zM7.5 9.406v.938h1v-.938h-1zm0 1.875v.938h1v-.938h-1zm0 1.875v.938h1v-.938h-1z"/>
-                        <path d="M0 0v16h16V0H0zm1 1h14v14H1V1z"/>
-                    </svg>
+                <div class="text-center m-1 ">
+                    <img class="img-fluid img-thumbnail" src="../../res/clock.jpg">
                     <p class="fs-5 mt-2"><b>There are</b> 60 seconds in hour</p>
                 </div>
 
             </div>
-            <div class="container mt-2 d-flex flex-wrap justify-content-between">
-                <div class="border border-my2 p-1 d-flex flex-column w-25">
-                    <p><b>there is...  (there's)</b></p>
-                    <p><b>is there...?</b></p>
-                    <p><b>there is not...</b>(<b>there isn't</b> or <b>there's not</b>)</p>
+            <div class="container mt-2 d-flex flex-wrap">
+                <div class="border border-my2 p-1 d-flex flex-column w-25 justify-content-center">
+                    <p><small><b>there is...  (there's)</b></small></p>
+                    <p><small><b>is there...?</b></small></p>
+                    <p><small><b>there is not...</b>(<b>there isn't</b> or <b>there's not</b>)</small></p>
                 </div>
-                <div class="d-flex flex-column border w-75">
+                <div class="d-flex flex-column w-75 justify-content-center align-items-center">
                     <ul>
-                        <li><b>There's</b> a big three in the garden</li>
-                        <li><b>There's</b> nothing on TV tonight</li>
-                        <li>We can't go skiing.<b>There isn't</b> any snow</li>
+                        <li class="fs-5"><b>There's</b> a big three in the garden</li>
+                        <li class="fs-5"><b>There's</b> nothing on TV tonight</li>
+                        <li class="fs-5">We can't go skiing.<b>There isn't</b> any snow</li>
                     </ul>
 
                 </div>
             </div>
-            <div class="container mt-3 d-flex flex-wrap justify-content-between ">
-                <div class="border border-my2 p-1 d-flex flex-column w-25">
-                    <p><b>there are...</b></p>
-                    <p><b>are there...?</b></p>
-                    <p><b>there are not...</b>(<b>there aren't</b>)</p>
+            <div class="container mt-3 d-flex flex-wrap ">
+                <div class="border border-my2 p-1 d-flex flex-column w-25 justify-content-center">
+                    <p><small><b>there are...</b></small></p>
+                    <p><small><b>are there...?</b></small></p>
+                    <p><small><b>there are not...</b>(<b>there aren't</b>)</small></p>
                 </div>
 
-                <div class="d-flex flex-column border w-75">
+                <div class="d-flex flex-column w-75 justify-content-center align-items-center">
                     <ul>
-                        <li><b>There are</b> some big trees in the garden</li>
-                        <li><b>There are</b> a lot of accidents on this road</li>
-                        <li><b>There are</b>  11 players in a football team</li>
+                        <li class="fs-5"><b>There are</b> some big trees in the garden</li>
+                        <li class="fs-5"><b>There are</b> a lot of accidents on this road</li>
+                        <li class="fs-5"><b>There are</b>  11 players in a football team</li>
                     </ul>
 
                 </div>
