--- a/grammar/elementary/lesson1.html
+++ b/grammar/elementary/lesson1.html
@@ -112,33 +112,33 @@
                 </div>
 
             </div>
-            <div class="container mt-2 d-flex flex-wrap">
-                <div class="border border-my2 p-1 d-flex flex-column w-25 justify-content-center">
-                    <p><small><b>there is...  (there's)</b></small></p>
-                    <p><small><b>is there...?</b></small></p>
-                    <p><small><b>there is not...</b>(<b>there isn't</b> or <b>there's not</b>)</small></p>
+            <div class="container-sm">
+                <div class="border border-my2 p-2 d-flex flex-wrap m-auto justify-content-between w-75">
+                    <p><b>there is...  (there's)</b></p>
+                    <p><b>is there...?</b></p>
+                    <p><b>there is not...</b>(<b>there isn't</b> or <b>there's not</b>)</p>
                 </div>
-                <div class="d-flex flex-column w-75 justify-content-center align-items-center">
-                    <ul>
-                        <li class="fs-5"><b>There's</b> a big three in the garden</li>
-                        <li class="fs-5"><b>There's</b> nothing on TV tonight</li>
-                        <li class="fs-5">We can't go skiing.<b>There isn't</b> any snow</li>
+                <div class="d-flex flex-column justify-content-center align-items-center mt-1">
+                    <ul class="list-group">
+                        <li class="list-group-item fs-5"><b>There's</b> a big three in the garden</li>
+                        <li class="list-group-item fs-5"><b>There's</b> nothing on TV tonight</li>
+                        <li class="list-group-item fs-5">We can't go skiing.<b>There isn't</b> any snow</li>
                     </ul>
 
                 </div>
             </div>
-            <div class="container mt-3 d-flex flex-wrap ">
-                <div class="border border-my2 p-1 d-flex flex-column w-25 justify-content-center">
-                    <p><small><b>there are...</b></small></p>
-                    <p><small><b>are there...?</b></small></p>
-                    <p><small><b>there are not...</b>(<b>there aren't</b>)</small></p>
+            <div class="container-sm mt-2">
+                <div class="border border-my2 p-2 d-flex flex-wrap m-auto justify-content-between w-75">
+                    <p><b>there are...</b></p>
+                    <p><b>are there...?</b></p>
+                    <p><b>there are not...</b>(<b>there aren't</b>)</p>
                 </div>
 
-                <div class="d-flex flex-column w-75 justify-content-center align-items-center">
-                    <ul>
-                        <li class="fs-5"><b>There are</b> some big trees in the garden</li>
-                        <li class="fs-5"><b>There are</b> a lot of accidents on this road</li>
-                        <li class="fs-5"><b>There are</b>  11 players in a football team</li>
+                <div class="d-flex flex-column justify-content-center align-items-center mt-1">
+                    <ul class="list-group">
+                        <li class="fs-5 list-group-item"><b>There are</b> some big trees in the garden</li>
+                        <li class="fs-5 list-group-item"><b>There are</b> a lot of accidents on this road</li>
+                        <li class="fs-5 list-group-item"><b>There are</b>  11 players in a football team</li>
                     </ul>
 
                 </div>
