--- a/grammar/elementary/lesson1.html
+++ b/grammar/elementary/lesson1.html
@@ -113,6 +113,9 @@
 
             </div>
             <div class="container-sm">
+                <p class="fs-4 text-my2">Singular:</p>
+            </div>
+            <div class="container-sm">
                 <div class="border border-my2 p-2 d-flex flex-wrap m-auto justify-content-between w-75">
                     <p><b>there is...  (there's)</b></p>
                     <p><b>is there...?</b></p>
@@ -123,9 +126,18 @@
                         <li class="list-group-item fs-5"><b>There's</b> a big three in the garden</li>
                         <li class="list-group-item fs-5"><b>There's</b> nothing on TV tonight</li>
                         <li class="list-group-item fs-5">We can't go skiing.<b>There isn't</b> any snow</li>
+                        <li class="list-group-item fs-5"><p class="fs-5">A: Have you got anu money</p>
+                            <p class="fs-5">B: Yes, <b>there's</b> some in my bag.</p>
+                        </li>
+                        <li class="list-group-item fs-5"><p class="fs-5">A: Excuse me, <b>is there</b> a hotel near here?</p>
+                            <p class="fs-5">B: Yes, <b>there's</b>. / No, <b>there isn't</b>.</p>
+                        </li>
                     </ul>
 
                 </div>
+            </div>
+            <div class="container-sm">
+                <p class="fs-4 text-my2 mt-2">Plural:</p>
             </div>
             <div class="container-sm mt-2">
                 <div class="border border-my2 p-2 d-flex flex-wrap m-auto justify-content-between w-75">
@@ -139,6 +151,10 @@
                         <li class="fs-5 list-group-item"><b>There are</b> some big trees in the garden</li>
                         <li class="fs-5 list-group-item"><b>There are</b> a lot of accidents on this road</li>
                         <li class="fs-5 list-group-item"><b>There are</b>  11 players in a football team</li>
+                        <li class="list-group-item fs-5>"><p class="fs-5">A: <b>Are there</b> any restaurants near here?</p>
+                            <p class="fs-5">B: Yes, <b>there are</b>. / No, <b>there aren't</b>.</p>
+                        </li>
+                        <li class="fs-5 list-group-item"> How many players <b>are there</b> in a football team?</li>                     </li>
                     </ul>
 
                 </div>
