--- a/listerning.html
+++ b/listerning.html
@@ -105,7 +105,7 @@
                 <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
 
                         <ul class="list-group">
-                            <a href="reading/elementary/lesson1.html" class="list-group-item list-group-item-action " aria-current="true">
+                            <a href="listenning/elementary/lesson1.html" class="list-group-item list-group-item-action " aria-current="true">
                                 <div class="d-flex w-100 justify-content-between">
                                     <h5 class="mb-1">Lesson 1</h5>
                                     <small>3 дня назад</small>
@@ -113,7 +113,7 @@
                                 <p class="mb-1">No Pets Here</p>
                                 <small>There are <b>gramma</b> exercises</small>
                             </a>
-                            <a href="reading/elementary/lesson2.html" class="list-group-item list-group-item-action " aria-current="true">
+                            <a href="" class="list-group-item list-group-item-action " aria-current="true">
                                 <div class="d-flex w-100 justify-content-between">
                                     <h5 class="mb-1">Lesson 2</h5>
                                     <small>3 дня назад</small>
@@ -121,7 +121,7 @@
                                 <p class="mb-1">Exam time</p>
                                 <small>There are <b>gramma</b> exercises</small>
                             </a>
-                            <a href="reading/elementary/lesson3.html" class="list-group-item list-group-item-action " aria-current="true">
+                            <a href="" class="list-group-item list-group-item-action " aria-current="true">
                                 <div class="d-flex w-100 justify-content-between">
                                     <h5 class="mb-1">Lesson 3</h5>
                                     <small>3 дня назад</small>
@@ -129,7 +129,7 @@
                                 <p class="mb-1">Camping</p>
                                 <small>There are <b>gramma</b> exercises</small>
                             </a>
-                            <a href="reading/elementary/lesson4.html" class="list-group-item list-group-item-action " aria-current="true">
+                            <a href="" class="list-group-item list-group-item-action " aria-current="true">
                                 <div class="d-flex w-100 justify-content-between">
                                     <h5 class="mb-1">Lesson 4</h5>
                                     <small>3 дня назад</small>
