--- a/grammar.html
+++ b/grammar.html
@@ -120,7 +120,6 @@
                 </h2>
                 <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show"
                      aria-labelledby="panelsStayOpen-headingOne">
-
                     <div class="row row-cols-md-auto g-3 align-items-center m-auto">
                         <div class="col-sm-auto">
                             <a href="reading/elementary/lesson1.html"
@@ -285,6 +284,7 @@
 
 
                     </div>
+                </div>
 
 
             </div>
