--- a/aboutus.html
+++ b/aboutus.html
@@ -69,7 +69,7 @@
     </nav>
 </header>
 
-<main class="container ">
+<main class="container">
 
     <div class="container2">
         <div class="container">
@@ -86,7 +86,7 @@
         <h1 class="mt-2 mb-3 display-1 ">About us</h1>
     </div>
 
-    <div class="row row-cols-md-auto g-3 m-auto align-items-center justify-content-center">
+    <div class="row row-cols-md-auto g-3 m-auto align-items-center justify-content-center w-75">
         <div class="col-sm-auto bg-body shadow p-1 rounded m-1">
             <div class="text-center">
                 <img class="img-fluid" src="res/Maxim%20Kovalev.jpg"  width="250">
