--- a/aboutus.html
+++ b/aboutus.html
@@ -82,11 +82,11 @@
         </div>
     </div>
 
-    <div class="container text-center">
+    <div class="container text-center p-2 shadow w-75 bg-body rounded">
         <h1 class="mt-2 mb-3 display-1 ">About us</h1>
     </div>
 
-    <div class="row row-cols-md-auto g-3 m-auto align-items-center justify-content-center w-75">
+    <div class="row row-cols-md-auto g-3 m-auto align-items-center justify-content-center w-75 mt-2">
         <div class="col-sm-auto bg-body shadow p-1 rounded m-1">
             <div class="text-center">
                 <img class="img-fluid" src="res/Maxim%20Kovalev.jpg"  width="250">
